--- a/cantine_scolaire/blog/templates/blog/base.html
+++ b/cantine_scolaire/blog/templates/blog/base.html
@@ -43,8 +43,7 @@
 
             </div>
             <div class="col-12 d-flex justify-content-center">
-
-
+                <a href="{% url 'login' %}">connexion</a>
             </div>
         </div>
 
@@ -63,7 +62,7 @@
 
             <ul class="list-unstyled components">
                 <li class="active">
-                    <a href="{% url 'post_list' %}"><i class="fas fa-home mr-2"></i> Accueil </a>
+                    <a href="#"><i class="fas fa-home mr-2"></i> Accueil </a>
                     <a href="#"><i class="fas fa-user mr-2"></i> Profil </a>
                     <a href="#"><i class="fas fa-utensils mr-2"></i> Cantine Scolaire</a>
                     <a href="#"><img src="{% static 'images/chef-hat.svg' %}" width="25px" height="30px" style="margin-right: 5px;">Recettes</a>
