--- a/cantine_scolaire/blog/templates/blog/base.html
+++ b/cantine_scolaire/blog/templates/blog/base.html
@@ -43,7 +43,11 @@
 
             </div>
             <div class="col-12 d-flex justify-content-center">
-                <a href="{% url 'login' %}">connexion</a>
+                {% if user.is_authenticated %}
+                <p class="top-menu">Bonjour {{ user.username }}
+                    <a href="{% url 'logout' %}">DECONNEXION</a> {% else %}
+
+                    <a class="nav-link active" href="{% url 'login' %}">CONNEXION</a> {% endif %}
             </div>
         </div>
 
