--- a/cantine_scolaire/blog/templates/blog/post_detail.html
+++ b/cantine_scolaire/blog/templates/blog/post_detail.html
@@ -1,15 +1,19 @@
 {% extends 'blog/base.html' %} {% block content %}
 <div class="post">
+    <!-- <div class="card" style="width: 22rem;"> -->
 
-    <h2>{{ post.titre }}</h2>
-    <p><i>Publié par : {{ post.auteur|linebreaksbr }}</i></p>
-    <img src="{{ post.image.url }}" alt="photo recette">
-    <p>{{ post.texte|linebreaksbr }}</p>
-    {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Modifier</a>
-    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">Supprimer</a> {% endif %}{% if post.date_de_publication %}
-    <div class="date">Date de création : {{ post.date_de_publication }}
+    <div class="card-body">
+        <h2 class="card-title">{{ post.titre }}</h2>
+        <p><i>Publié par : {{ post.auteur|linebreaksbr }}</i></p>
+        <p><i>Date de création : {{ post.date_de_publication }}</i></p>
+        <img class="card-img-top" src="{{ post.image.url }}" alt="photo recette">
+        <p>{{ post.texte|linebreaksbr }}</p>
+
+        <a href="{% url 'post_edit' pk=post.pk %}" class="btn">Modifier</a> {% if perms.blog.supprimer_post %}
+        <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">Supprimer</a> {% endif %}
+
     </div>
-    {% endif %}
 </div>
+
+
 {% endblock %}
