--- a/cantine_scolaire/blog/templates/blog/base.html
+++ b/cantine_scolaire/blog/templates/blog/base.html
@@ -29,7 +29,7 @@
         <a class="navbar-brand d-none d-md-block"><img src="{% static 'images/Logo_TD_fd_transparent.png' %}" style="width:250px"></a>
         <div class="logo_facecook text-center">
             <img src="{% static 'images/logo1.PNG' %}" alt="logo">
-            <h2 style="font-family:'BigJohn' ;">Face <span style="font-family:'SlimJoe';">Cook</span></h2>
+            <h1>Face Cook</h1>
         </div>
 
         <!-- Recherche-->
@@ -42,13 +42,7 @@
                 </form>
 
             </div>
-            <div class="col-12 d-flex justify-content-center">
-                {% if user.is_authenticated %}
-                <p class="top-menu">Bonjour {{ user.username }}
-                    <a href="{% url 'logout' %}">DECONNEXION</a> {% else %}
 
-                    <a class="nav-link active" href="{% url 'login' %}">CONNEXION</a> {% endif %}
-            </div>
         </div>
 
 
@@ -60,19 +54,29 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>Nom User</h3>
+                <h3>{{ user.username }}</h3>
                 <strong>NU</strong>
             </div>
+            <ul class="list-unstyled components ">
+                <li class="active ">
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'logout' %} "><img src="{% static 'images/logout.png' %} " width="20px " height="25px " style="margin-right: 5px; "> Déconnexion</a> {% else %}
+                    <a href="{% url 'login' %} "><img src="{% static 'images/login.png' %} " width="20px " height="25px " style="margin-right: 5px; "> Connexion</a> {% endif %} {% if perms.blog.dashboard_admin %}
+                    <a href="/admin/"><i class="fas fa-user mr-2"></i> Dashboard </a> {% endif %}
 
+                </li>
+            </ul>
             <ul class="list-unstyled components">
                 <li class="active">
-                    <a href="#"><i class="fas fa-home mr-2"></i> Accueil </a>
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'post_list' %}"><i class="fas fa-home mr-2"></i> Accueil </a>
                     <a href="#"><i class="fas fa-user mr-2"></i> Profil </a>
                     <a href="#"><i class="fas fa-utensils mr-2"></i> Cantine Scolaire</a>
+                    <a href="{% url 'post_new' %}"><img src="{% static 'images/chef-hat.svg' %}" width="25px" height="30px" style="margin-right: 5px;">Créer une recette</a>
                     <a href="#"><img src="{% static 'images/chef-hat.svg' %}" width="25px" height="30px" style="margin-right: 5px;">Recettes</a>
                     <a href="#"><i class="fas fa-folder mr-2"></i>Documents</a>
                     <a href="#"><i class="fas fa-comments mr-2"></i>Chat </a>
-                    <a href="#"><i class="fas fa-calendar-alt mr-2"></i>Calendrier </a>
+                    <a href="#"><i class="fas fa-calendar-alt mr-2"></i>Calendrier </a>{% endif %}
 
                 </li>
                 <li>
@@ -109,6 +113,7 @@
             <div class="content container">
                 <div class="row">
                     <div class="col-md-8">
+
                         {% block content %} {% endblock %}
 
                     </div>
