--- a/cantine_scolaire/blog/templates/blog/post_edit.html
+++ b/cantine_scolaire/blog/templates/blog/post_edit.html
@@ -1,6 +1,14 @@
 {% extends 'blog/base.html' %} {% block content %}
-<h2>Nouvelle recette</h2>
-<form method="POST" class="post-form" enctype="multipart/form-data">{% csrf_token %} {{ form.as_p }}
-    <button type="submit" class="save btn btn-outline-secondary">Save</button>
-</form>
+
+
+<div class="card border-info mb-3">
+
+    <div class="card-body text-info">
+
+        <h2>Créer votre recette</h2>
+        <form method="POST" class="post-form" enctype="multipart/form-data">{% csrf_token %} {{ form.as_p }}
+            <button type="submit" class="save btn btn-outline-secondary">Enregistrer</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
