--- a/cantine_scolaire/blog/templates/blog/post_list.html
+++ b/cantine_scolaire/blog/templates/blog/post_list.html
@@ -1,12 +1,12 @@
 {% extends 'blog/base.html' %} {% block content %} {% for post in posts %}
 
 
-<div class="card" style="width: 22rem;">
+<div class="card">
 
     <div class="card-body">
-        <h5 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titre }}</a></h5>
+        <h2 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titre }}</a></h2>
         <img class="card-img-top" src="{{ post.image.url }}" alt="photo recette">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text">{{ post.accroche|linebreaksbr }}</p>
+        <a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-primary">Voir plus ...</a>
     </div>
-</div>{% endfor %} {% endblock %}
+</div>{% endfor %} {% endblock %}<p
