--- a/cantine_scolaire/blog/templates/blog/post_detail.html
+++ b/cantine_scolaire/blog/templates/blog/post_detail.html
@@ -5,7 +5,9 @@
     <div class="card-body">
         <h2 class="card-title">{{ post.titre }}</h2>
         <p><i>Publié par : {{ post.auteur|linebreaksbr }}</i></p>
-        <p><i>Date de création : {{ post.date_de_publication }}</i></p>
+
+        <p><i>Date de création : {{ post.date_de_creation }}</i></p>
+        <p><i>Dernière modification : {{ post.date_de_publication }}</i></p>
         <img class="card-img-top" src="{{ post.image.url }}" alt="photo recette">
         <p>{{ post.texte|linebreaksbr }}</p>
 
