--- a/cantine_scolaire/blog/templates/blog/post_list.html
+++ b/cantine_scolaire/blog/templates/blog/post_list.html
@@ -7,6 +7,19 @@
         <h2 class="card-header"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titre }}</a></h2>
         <img class="card-img-top" src="{{ post.image.url }}" alt="photo recette">
         <p class="card-text">{{ post.accroche|linebreaksbr }}</p>
-        <a href="{% url 'post_detail' pk=post.pk %}" class="btn">Voir plus ...</a>
+        <div class="d-flex justify-content-center col-12">
+            <div class="row">
+                <div class="col-6">
+                    <a href="{% url 'post_detail' pk=post.pk %}" class="btn">Voir plus ...</a>
+                </div>
+                <div class="col-6">
+                    <a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn"> Commentaire</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-footer"><a href="{% url 'post_detail' pk=post.pk %}">Commentaire : {{ post.comments.count }}</a></div>
     </div>
+
+
 </div>{% endfor %} {% endblock %}<p
