--- a/cantine_scolaire/blog/templates/blog/base.html
+++ b/cantine_scolaire/blog/templates/blog/base.html
@@ -7,13 +7,31 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Plateforme des cantines scolaires</title>
+    <link rel="icon" href="{% static 'images/favicon-16x16.png' %}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="lili">
+    <meta name="description" content="Developpement de la plateforme des cantines scolaires de la Communauté de Communes Lavalette Tude Dronne, dans le cadre du titre professionnel d'activités de développeur web et web mobile">
+
+
+    <!-- meta réseaux sociaux -->
+
+    <meta property="og:titre" content="Plateforme des cantines scolaire de la CCLTD">
+    <meta property="og:type" content="siteweb">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="https://www.lavalette-tude-dronne.fr/ecoles/">
+    <meta property="og:description" content="Developpement de la plateforme des cantines scolaires de la Communauté de Communes Lavalette Tude Dronne, dans le cadre du titre professionnel d'activités de développeur web et web mobile">
+
+
+    <!-- style -->
+
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     <script src="https://kit.fontawesome.com/b945165441.js" crossorigin="anonymous"></script>
 
 
-    <title>Nos recettes</title>
+
 </head>
 
 
@@ -24,30 +42,32 @@
 
 
 <body>
+
     <!-- header -->
     <nav class="navbar navbar-dark">
         <a class="navbar-brand d-none d-md-block"><img src="{% static 'images/Logo_TD_fd_transparent.png' %}" style="width:250px"></a>
         <div class="logo_facecook text-center">
             <img src="{% static 'images/logo1.PNG' %}" alt="logo">
-            <h1>Face Cook</h1>
+            <h1>
+                <span id="face">Face</span>
+                <span id="cook">Cook</span>
+            </h1>
         </div>
+
+
 
         <!-- Recherche-->
         <div class="row">
             <div class=" d-flex col-12 justify-content-center">
                 <form class="form-inline">
                     <input class="form-control mr-sm-2 d-none d-md-block" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline my-2 my-sm-0" style="background-color:  #ff6c40;
-      color: white;" type="submit"><i class="fas fa-search"></i></button>
+                    <button class="btn btn-outline my-2 my-sm-0" id="bouton_search" type="submit"><i class="fas fa-search"></i></button>
                 </form>
-
             </div>
-
         </div>
-
-
-
     </nav>
+
+
 
     <!-- navigation -->
     <div class="wrapper">
@@ -55,13 +75,13 @@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <h3>{{ user.username }}</h3>
-                <strong>NU</strong>
             </div>
             <ul class="list-unstyled components ">
                 <li class="active ">
                     {% if user.is_authenticated %}
-                    <a href="{% url 'logout' %} "><img src="{% static 'images/logout.png' %} " width="20px " height="25px " style="margin-right: 5px; "> Déconnexion</a> {% else %}
-                    <a href="{% url 'login' %} "><img src="{% static 'images/login.png' %} " width="20px " height="25px " style="margin-right: 5px; "> Connexion</a> {% endif %} {% if perms.blog.dashboard_admin %}
+                    <a href="{% url 'logout' %} "><img src="{% static 'images/logout.png' %}" class="log"> Déconnexion</a>
+                    {% else %}
+                    <a href="{% url 'login' %} "><img src="{% static 'images/login.png' %}" class="log"> Connexion</a> {% endif %} {% if perms.blog.dashboard_admin %}
                     <a href="/admin/"><i class="fas fa-user mr-2"></i> Dashboard </a> {% endif %}
 
                 </li>
@@ -71,13 +91,12 @@
                     {% if user.is_authenticated %}
                     <a href="{% url 'post_list' %}"><i class="fas fa-home mr-2"></i> Accueil </a>
                     <a href="#"><i class="fas fa-user mr-2"></i> Profil </a>
-                    <a href="#"><i class="fas fa-utensils mr-2"></i> Cantine Scolaire</a>
-                    <a href="{% url 'post_new' %}"><img src="{% static 'images/chef-hat.svg' %}" width="25px" height="30px" style="margin-right: 5px;">Créer une recette</a>
-                    <a href="#"><img src="{% static 'images/chef-hat.svg' %}" width="25px" height="30px" style="margin-right: 5px;">Recettes</a>
+                    <a href="#"><i class="fas fa-utensils mr-2"></i> Cantine Scolaire</a> {% if perms.blog.ajouter_post %}
+                    <a href="{% url 'post_new' %}"><img src="{% static 'images/chef-hat.svg' %}" class="recette">Créer une recette</a>{% endif %}
+                    <a href="#"><img src="{% static 'images/chef-hat.svg' %}" class="recette">Recettes</a>
                     <a href="#"><i class="fas fa-folder mr-2"></i>Documents</a>
                     <a href="#"><i class="fas fa-comments mr-2"></i>Chat </a>
                     <a href="#"><i class="fas fa-calendar-alt mr-2"></i>Calendrier </a>{% endif %}
-
                 </li>
                 <li>
                     <a href="#">
@@ -100,19 +119,17 @@
 
         <!-- Page Content  -->
         <div id="content">
-
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <button type="button" id="sidebarCollapse" class="btn btn-info d-md-none">
-                    <i class="fas fa-align-left"></i>
-                    <span>Menu</span>
+                <div class="container-fluid  d-md-none">
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fas fa-align-left"></i>       
                 </button>
+                    <h3>{{ user.username }}</h3>
                 </div>
-
             </nav>
-            <div class="content container">
+            <div class="content container" id="post">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-12">
 
                         {% block content %} {% endblock %}
 
@@ -120,18 +137,18 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+
 
     <!-- Footer-->
 
-    <div class="row w-100 m-0">
-        <!-- Recomiendo colocar .w-100 .m-0 a los rows que den problemas -->
+    <div class="row">
         <footer class="col-12 col-md-12 text-center">
             <div class="col-12 d-md-none">
                 <img src="{% static 'images/Logo_TD_fd_transparent.png' %}" class="img-fluid" alt="Logo">
             </div>
-            <div class=" d-col-none col-md-4 text-center">
+            <div class=" d-col-none col-md-4 text-center footer">
                 <p>Copyright &copy; 2020 FaceCook</p>
             </div>
         </footer>
