--- a/cantine_scolaire/blog/templates/blog/post_detail.html
+++ b/cantine_scolaire/blog/templates/blog/post_detail.html
@@ -12,8 +12,7 @@
         <img class="card-img-top" src="{{ post.image.url }}" alt="photo recette">
         <p>{{ post.texte|linebreaksbr }}</p>
 
-        <a href="{% url 'post_edit' pk=post.pk %}" class="btn">Modifier</a> {% if perms.blog.supprimer_post %}
-        <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">Supprimer</a> {% endif %}
+        {% if perms.blog.modifier_post %}<a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-secondary">Modifier</a> {% endif %} {% if perms.blog.supprimer_post %}<a class="btn btn-outline-secondary" href="{% url 'post_remove' pk=post.pk %}">Supprimer</a>        {% endif %}
 
     </div>
 </div>
@@ -27,7 +26,7 @@
         <h4 class="card-title">{{ comment.auteur }}</h4>
         <div class="date">{{ comment.date_de_creation | date:"d M Y, h:i a" }}</div>
         <p>{{ comment.texte|linebreaks }}</p>
-        {% if perms.blog.supprimer_comment %} <a class="btn btn-default" href="{% url 'comment_remove' pk=post.pk %}">Supprimer</a> {% endif %}
+        {% if perms.comment.supprimer_comment %} <a class="btn btn-outline-secondary" href="{% url 'comment_remove' pk=post.pk %}">Supprimer</a> {% endif %}
     </div>
 </div>
 
