--- a/cantine_scolaire/blog/templates/blog/base.html
+++ b/cantine_scolaire/blog/templates/blog/base.html
@@ -11,7 +11,8 @@
     <link rel="icon" href="{% static 'images/favicon-16x16.png' %}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="lili">
-    <meta name="description" content="Developpement de la plateforme des cantines scolaires de la Communauté de Communes Lavalette Tude Dronne, dans le cadre du titre professionnel d'activités de développeur web et web mobile">
+    <meta name="description" content="Developpement de la plateforme des cantines scolaires de la Communauté de Communes Lavalette Tude Dronne, 
+    dans le cadre du titre professionnel d'activités de développeur web et web mobile">
 
 
     <!-- meta réseaux sociaux -->
@@ -20,7 +21,8 @@
     <meta property="og:type" content="siteweb">
     <meta property="og:url" content="">
     <meta property="og:image" content="https://www.lavalette-tude-dronne.fr/ecoles/">
-    <meta property="og:description" content="Developpement de la plateforme des cantines scolaires de la Communauté de Communes Lavalette Tude Dronne, dans le cadre du titre professionnel d'activités de développeur web et web mobile">
+    <meta property="og:description" content="Developpement de la plateforme des cantines scolaires de la Communauté de Communes Lavalette Tude 
+    Dronne, dans le cadre du titre professionnel d'activités de développeur web et web mobile">
 
 
     <!-- style -->
@@ -45,9 +47,9 @@
 
     <!-- header -->
     <nav class="navbar navbar-dark">
-        <a class="navbar-brand d-none d-md-block"><img src="{% static 'images/Logo_TD_fd_transparent.png' %}" style="width:250px"></a>
+        <a class="navbar-brand d-none d-md-block"><img src="{% static 'images/Logo_TD_fd_transparent.png' %}" alt="logo CCLTD" id="logo_ccltd"></a>
         <div class="logo_facecook text-center">
-            <img src="{% static 'images/logo1.PNG' %}" alt="logo">
+            <img src="{% static 'images/logo1.PNG' %}" alt="logo face cook">
             <h1>
                 <span id="face">Face</span>
                 <span id="cook">Cook</span>
@@ -73,15 +75,15 @@
     <div class="wrapper">
         <!-- Sidebar  -->
         <nav id="sidebar">
-            <div class="sidebar-header">
+            <div class="sidebar-header d-none d-sm-block">
                 <h3>{{ user.username }}</h3>
             </div>
-            <ul class="list-unstyled components ">
+            <ul class="list-unstyled components">
                 <li class="active ">
                     {% if user.is_authenticated %}
-                    <a href="{% url 'logout' %} "><img src="{% static 'images/logout.png' %}" class="log"> Déconnexion</a>
+                    <a href="{% url 'logout' %} "><img src="{% static 'images/logout.png' %}" alt="icon deconnexion" class="log"> Déconnexion</a>
                     {% else %}
-                    <a href="{% url 'login' %} "><img src="{% static 'images/login.png' %}" class="log"> Connexion</a> {% endif %} {% if perms.blog.dashboard_admin %}
+                    <a href="{% url 'login' %} "><img src="{% static 'images/login.png' %}" alt="icon connexion" class="log"> Connexion</a> {% endif %} {% if perms.blog.dashboard_admin %}
                     <a href="/admin/"><i class="fas fa-user mr-2"></i> Dashboard </a> {% endif %}
 
                 </li>
@@ -92,8 +94,8 @@
                     <a href="{% url 'post_list' %}"><i class="fas fa-home mr-2"></i> Accueil </a>
                     <a href="#"><i class="fas fa-user mr-2"></i> Profil </a>
                     <a href="#"><i class="fas fa-utensils mr-2"></i> Cantine Scolaire</a> {% if perms.blog.ajouter_post %}
-                    <a href="{% url 'post_new' %}"><img src="{% static 'images/chef-hat.svg' %}" class="recette">Créer une recette</a>{% endif %}
-                    <a href="#"><img src="{% static 'images/chef-hat.svg' %}" class="recette">Recettes</a>
+                    <a href="{% url 'post_new' %}"><img src="{% static 'images/chef-hat.svg' %}" alt="icon toque" class="recette">Poster une recette</a>{% endif %}
+                    <a href="#"><img src="{% static 'images/chef-hat.svg' %}" alt="icon toque" class="recette">Recettes</a>
                     <a href="#"><i class="fas fa-folder mr-2"></i>Documents</a>
                     <a href="#"><i class="fas fa-comments mr-2"></i>Chat </a>
                     <a href="#"><i class="fas fa-calendar-alt mr-2"></i>Calendrier </a>{% endif %}
@@ -144,12 +146,14 @@
     <!-- Footer-->
 
     <div class="row">
-        <footer class="col-12 col-md-12 text-center">
+        <footer class="col-12 text-center">
             <div class="col-12 d-md-none">
-                <img src="{% static 'images/Logo_TD_fd_transparent.png' %}" class="img-fluid" alt="Logo">
+                <img src="{% static 'images/Logo_TD_fd_transparent.png' %}" alt="logo CCLTD" class="img-fluid" alt="Logo">
             </div>
-            <div class=" d-col-none col-md-4 text-center footer">
-                <p>Copyright &copy; 2020 FaceCook</p>
+            <div class=" col-12 col-md-4 text-center footer">
+                <div id="footer">
+                    Copyright &copy; 2020 FaceCook
+                </div>
             </div>
         </footer>
     </div>
