--- a/cantine_scolaire/blog/templates/blog/post_edit.html
+++ b/cantine_scolaire/blog/templates/blog/post_edit.html
@@ -5,7 +5,7 @@
 
     <div class="card-body text-info">
 
-        <h2>Créer votre recette</h2>
+        <h2>Poster votre recette</h2>
         <form method="POST" class="post-form" enctype="multipart/form-data">{% csrf_token %} {{ form.as_p }}
             <button type="submit" class="save btn btn-outline-secondary">Enregistrer</button>
         </form>
