--- a/cantine_scolaire/blog/templates/blog/post_list.html
+++ b/cantine_scolaire/blog/templates/blog/post_list.html
@@ -6,26 +6,27 @@
     <div class="card-body">
         <h2 class="card-header"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titre }}</a></h2>
         <p><i>{{ post.auteur }}</i></p>
-        <img class="card-img-top" src="{{ post.image.url }}" alt="photo recette">
+        <a href="{% url 'post_detail' pk=post.pk %}"><img class="card-img-top" src="{{ post.image.url }}" alt="photo recette"></a>
+
         <p class="card-text">{{ post.accroche }}</p>
         <div class="d-flex justify-content-center col-12">
             <div class="col-3 d-none d-md-block">
                 <a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-outline-secondary">Voir plus...</a>
             </div>
             <div class="col-3 d-block d-md-none">
-                <a href="{% url 'post_detail' pk=post.pk %}"><img src="{% static 'images/kitchen.png' %}" class="list"></a>
+                <a href="{% url 'post_detail' pk=post.pk %}"><img src="{% static 'images/kitchen.png' %}" alt="icon toque" class="list"></a>
             </div>{% if perms.blog.ajouter_comment %}
             <div class="col-3 d-none d-md-block">
                 <a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-outline-secondary"> Commentaire</a>
             </div>
             <div class="col-3 d-block d-md-none">
-                <a href="{% url 'add_comment_to_post' pk=post.pk %}"><img src="{% static 'images/comment.png' %}" class="list"></a>
+                <a href="{% url 'add_comment_to_post' pk=post.pk %}"><img src="{% static 'images/comment.png' %}" alt="icon comment" class="list"></a>
             </div> {% endif %} {% if perms.blog.supprimer_post %}
             <div class="col-3 d-none d-md-block">
                 <a href="{% url 'post_remove' pk=post.pk %}" class="btn btn-outline-secondary">Supprimer</a>
             </div>
             <div class="col-3 d-block d-md-none">
-                <a href="{% url 'post_remove' pk=post.pk %}"><img src="{% static 'images/trash.png' %}" class="list"></a>
+                <a href="{% url 'post_remove' pk=post.pk %}"><img src="{% static 'images/trash.png' %}" alt="icon supprimer" class="list"></a>
             </div> {% endif %}
         </div>
 
